--- a/index.html
+++ b/index.html
@@ -1,22 +1,117 @@
 <!DOCTYPE html>
-<html>
-<!DOCTYPE html>
-<html>
+<html lang="de">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-    <title>Meine Website</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
+    <title>TaFo(App)</title>
 
-<body>
-    <h1>Martina Mustermann</h1>
-    <p>Ich bin in der 8. Klasse und wohne in Berlin.</p>
-    <p> Du kannst diese Seite unter folgendem Link betrachten nachdem die Datei gespeichert wurde. Achte Darauf, dass du GitHub nochmal im Browser aktualisierst<p>
-    <a href="https://starcodemuenchen.github.io/webDevWG09/"> https://starcodemuenchen.github.io/webDevWG09/ </a>
-    
-   <p> Du kannst diese Seite unter folgendem Link betrachten, wenn du mit Steuerung C oder "Commit changes..." gespeichert hast.<p>
-    <a href="https://htmlpreview.github.io"> https://htmlpreview.github.io </a>
-   <p> Füge dann den Link: https://starcodemuenchen.github.io/webDevWG09/ ein.<p>
-</body>
+    <!-- CSS Stylesheets -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
+    <!-- Font Awesome -->
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"
+    ></script>
+  </head>
+
+  <body>
+    <!-- ======================================= -->
+    <!-- ===== Section 1: Navigationszeile ===== -->
+    <!-- ======================================= -->
+    <!-- Die Navigationszeile ist dafür da, dass man schnell zu bestimmten Sections auf unserer Website navigieren kann-->
+    <section class="section-style-1" id="navbar">
+      <div class="container-fluid">
+        <!-- Dein Code -->
+      </div>
+    </section>
+
+    <!-- ================================ -->
+    <!-- ===== Section 2: Überblick ===== -->
+    <!-- ================================ -->
+    <!-- Hier wird der Nutzer auf unsere App aufmerksam gemacht -->
+    <section class="section-style-2" id="überblick">
+      <div class="container-fluid">
+        <!-- Dein Code -->
+        <div  class="row">
+            <div class="coll-lg-6 überblick links"></div>
+            <h1 class="großer Titel">TaFo</h1>
+            <h3 class="kleiner Titel">Tasty Food: Hier bestellen und in 10min wird es bei dir ankommen
+            </h3>
+            <button type="button" class="btn btn-dark btn-lg">Probier es aus!</button>
+            <div class="coll-lg-6 überblick rechts">
+              <img class="app-bild" src="images/Sushi-Bild.jpg" />
+            </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- =============================== -->
+    <!-- ===== Section 3: Features ===== -->
+    <!-- =============================== -->
+    <!-- Hier werden die Features unserer App aufgelistet -->
+    <section class="section-style-1" id="features">
+      <div class="container-fluid text-center">
+
+        <div class="row">
+          <div class="feature-box col-lg-4">
+          
+
+            <h3 class="kleiner-titel">Suchen</h3>
+            <p>
+              Finde über 300 leckere Gerichte
+              <i class="fa-solid fa-pizza-slice" style="color: #ffffff;"></i>
+            </p>
+          </div>
+          <div class="feature-box col-lg-4"> <h3 class="kleiner-titel">Bestellen</h3>
+            <p>
+             Zahle gelich beim Bestellen
+            </p></div>
+          <div class="feature-box col-lg-4"> <h3 class="kleiner-titel">Essen</h3>
+            <p>
+              Genieße dein Essen!
+            </p></div>    
+        <!-- Dein Code -->
+      </div></div>
+    </section>
+
+    <!-- ========================================= -->
+    <!-- ===== Section 4: Nutzer-Bewertungen ===== -->
+    <!-- ========================================= -->
+    <!-- Hier werden die Nutzer-Bewertungen angezeigt -->
+    <section class="section-style-2" id="bewertungen">
+      <!-- Dein Code -->
+    </section>
+
+    <!-- ============================= -->
+    <!-- ===== Section 5: Preise ===== -->
+    <!-- ============================= -->
+    <!-- Hier werden die verschiedenen Preispläne unserer App aufgelistet -->
+    <section class="section-style-1" id="preise">
+      <!-- Dein Code -->
+    </section>
+
+    <!-- ============================= -->
+    <!-- ===== Section 6: Footer ===== -->
+    <!-- ============================= -->
+    <!-- Hier werden die Social-Media-Icons und der Copyright-Text angezeigt -->
+    <section class="section-style-2" id="footer">
+      <div class="container-fluid text-center">
+        <!-- Dein Code -->
+      </div>
+    </section>
+    <!-- Bootstrap JS Script -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
